refactor: use .toList() where possible